--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,16 +10,16 @@
 
 <div class="loginBox">
 
-
+<form action="/login" method="post">
   <div class="LoginInput">
-    <label for="username">Brugernavn</label>
-    <input type="text" id="username">
-
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email">
     <label for="password">Kodeord</label>
     <input type="password" id="password">
 
     <button type="submit">Login</button>
   </div>
+</form>
 
 </div>
 
