--- a/src/main/resources/static/css/indexCSS.css
+++ b/src/main/resources/static/css/indexCSS.css
@@ -13,21 +13,17 @@ body {
 .welcomeTextBox {
     background-color: rgba(65, 65, 65, 0.61);
     border-radius: 10px;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
-    width: 400px; /
-    height: 100px;
-    top: 150px;
-    left: 780px;
+    width: 50%;
+    margin: 50px auto 0 auto;
     box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.6);
 
     .welcomeText {
         text-align: center;
-
-        top: 25%;
-        right: 25%;
-        left: 25%;
-        bottom: 25%;
         color: white;
 
 
@@ -40,8 +36,9 @@ body {
 .button-container {
     display: flex;
     gap: 80px;
+    align-items: center;
     justify-content: center;
-    margin-top: 350px;
+    margin-top: 120px;
 
 }
 
