--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,25 +2,31 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Opret bruger</title>
   <link rel="stylesheet" th:href="@{/css/registerCSS.css}">
 </head>
 <body>
 
 <div class="registerBox">
-  <div class="RegisterInput">
-    <form th:action="@{/register}" method="post">
+  <div class="formLayout">
+    <form th:action="@{/register}" method="post" class="RegisterInput">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
       <label for="password">Adgangskode</label>
       <input type="password" id="password" name="password" required>
+    </form>
 
-      <button type="submit" class="registerButton">Opret bruger</button>
-    </form>
-    <form th:action="@{/login}" method="get">
-      <button type="submit" class="returnButton">Returner til Login</button>
-    </form>
+    <div class="buttonColumn">
+      <form th:action="@{/register}" method="post">
+        <button type="submit" class="registerButton">Opret bruger</button>
+      </form>
+      <form th:action="@{/login}" method="get">
+        <button type="submit" class="returnButton">Returner til Login</button>
+      </form>
+    </div>
   </div>
 </div>
+
 </body>
 </html>
