--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,6 +14,9 @@
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
 
+      <label for="username">Brugernavn</label>
+      <input type="text" id="username" name="username" required>
+
       <label for="password">Adgangskode</label>
       <input type="password" id="password" name="password" required>
 
