Næsten done, mangler admin logik

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
     </div>
     </form>
 
-    <form action="/admin" th:href="@{/admin}">
+    <form action="/admin" th:href="@{/admin/dashboard}">
     <div class="rightButton">
         <button>Admin Login</button>
     </div>
